tests/snapshots/run_wpt_conformance__onnx_lesserOrEqual_float16_broadcasting_two_5D_inputs_with_a_leading_batch_size_of_1.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "lesser_or_equal.https.any.js",
    "lesserOrEqual float16 broadcasting two 5D inputs with a leading batch size of 1",
    "onnx",
    "PASS",
)
